Fix spacing for large screens

--- a/exercise 1.2/css/styles.css
+++ b/exercise 1.2/css/styles.css
@@ -74,7 +74,7 @@ summary::marker {
 
 .outer-div {
   background-color: var(--primary-color);
-  height: 100%;
+  min-height: 100vh !important;
   padding: 25px 0px 25px 0px;
 }
 
@@ -84,10 +84,14 @@ summary::marker {
   margin-top: 25px;
   margin-bottom: 25px;
   width: 93%;
-  height: 90%;
+  min-height: 90vh;
   border-radius: 15px;
   box-shadow: 1px 3px 25px rgba(0, 0, 0, 0.25);
   box-shadow: 1px 3px 25px rgba(113, 29, 217, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 100px;
 }
 
 /* Header section */
@@ -224,7 +228,7 @@ header p:focus {
 
 .profile {
   max-width: 700px;
-  margin: 100px auto;
+  margin: 50px auto;
   display: flex;
 }
 
@@ -362,14 +366,13 @@ header p:focus {
 
 .contact-title {
   text-align: center;
-  margin-top: 50px;
 }
 
 .contact-info {
   width: 40%;
   height: 40%;
   margin: 0 auto;
-  margin-bottom: 170px;
+
   margin-top: 50px;
   padding: 50px;
   border: 2px solid var(--primary-color);
